RESOLVED FIXED215319
REGRESSION (r265176): Cannot make or extend selections in iOS WebKitLegacy
https://bugs.webkit.org/show_bug.cgi?id=215319
Summary REGRESSION (r265176): Cannot make or extend selections in iOS WebKitLegacy
Tim Horton
Reported 2020-08-10 00:36:32 PDT
REGRESSION (r265176): Cannot make or extend selections in iOS WebKitLegacy
Attachments
Patch (1.65 KB, patch)
2020-08-10 00:37 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2020-08-10 00:37:01 PDT
Tim Horton
Comment 2 2020-08-10 00:37:04 PDT
Devin Rousso
Comment 3 2020-08-10 00:38:37 PDT
Comment on attachment 406286 [details] Patch r=mews
EWS
Comment 4 2020-08-10 01:18:07 PDT
Committed r265424: <https://trac.webkit.org/changeset/265424> All reviewed patches have been landed. Closing bug and clearing flags on attachment 406286 [details].
Darin Adler
Comment 5 2020-08-10 10:59:38 PDT
Comment on attachment 406286 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=406286&action=review > Source/WebKitLegacy/ios/ChangeLog:12 > + * WebCoreSupport/WebVisiblePosition.mm: > + (+[DOMRange rangeForFirstPosition:second:]): > + We want to ensure that firstPosition is *before* secondPosition, so > + the change in r265176 got the condition backwards. Swap it. So sorry! I should make a regression test.
Note You need to log in before you can comment on or make changes to this bug.