REGRESSION (r265176): Cannot make or extend selections in iOS WebKitLegacy https://bugs.webkit.org/show_bug.cgi?id=215319 <rdar://problem/66688560>

Reviewed by Devin Rousso.

* WebCoreSupport/WebVisiblePosition.mm:
(+[DOMRange rangeForFirstPosition:second:]):
We want to ensure that firstPosition is *before* secondPosition, so
the change in r265176 got the condition backwards. Swap it.


Canonical link: https://commits.webkit.org/228102@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265424 268f45cc-cd09-0410-ab3c-d52691b4dbfc